# gsky

./: .travis.yml  CITATION.md  Makefile.in  README.md  build_deps.sh  build_gsky.sh  config_json.md  configure  configure.ac  dap.go  go.mod  go.sum  ows.go  ows_test.go  patch_shard.sh
acceptance_tests/: accept.go  acpt_test_wps.tpl  acpt_url.tpl  acpt_url_usgs.tpl
crawl/: GSKY_Crawl_MAS.docx  GSKY_Crawl_MAS.ppsx  GSKY_Crawl_MAS.pptx  README.md  crawl.go  crawl.sh  crawl_and_ingest.sh  crawl_original.sh  crawl_pipeline.sh  crawl_test.go  ingest.sh
docker/: Dockerfile  README.md  build_deps.sh  build_gdal.sh  build_gsky.sh  build_pgsql.sh  build_postgis.sh  build_terriajs.sh  data_ingestion.md  demo_wps_request.sh  gsky_config.json  gsky_entry_point.sh  ingest_sample_data.sh  setup_mas.sh  setup_terriajs.sh  terria_config.json  terria_init.json  wps_payload.xml
gdal-process/: main.go
grpc-server/: main.go
grpc_server/: gdal_process.go  grpc_server.go  test_warp_process.go
install/: README.md  Setting_up_GSKY_environment.docx  build_all.pptx  build_all.sh  build_deps.sh  build_gsky.sh  config.json  pgsql2shp  postgis-2.5.0_Makefile.in  shp2pgsql
mas/: MAS_Design.md  README.md
metrics/: log_format.md  logger.go  metrics.go
processor/: conc_limiter.go  date_splitter.go  drill_grpc.go  drill_indexer.go  drill_merger.go  drill_pipeline.go  drill_types.go  feature_info.go  info_crawler.go  info_encoder.go  info_grpc.go  info_pipeline.go  info_printer.go  palette.go  thredds.go  tile_extent.go  tile_extent_test.go  tile_grpc.go  tile_indexer.go  tile_jpg_enc.go  (+9 more)
(+169 files in other folders)
